<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_title_black_48dp" />

                <EditText
                    android:id="@+id/appointTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/title" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">


                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_schedule_black_48dp" />

                <EditText
                    android:id="@+id/appointTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="8"
                    android:hint="@string/time" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_description_black_48dp" />

                <EditText
                    android:id="@+id/appointDetails"
                    android:inputType="textMultiLine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="top"
                    android:scrollbars="vertical"
                    android:scrollbarSize="30dp"
                    android:maxHeight="100dp"
                    android:minHeight="100dp"
                    android:focusable="true"
                    android:isScrollContainer="true"
                    android:hint="@string/details" />








            </LinearLayout>

            <Button
                android:id="@+id/btnReplace"
                style="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/btnReplace" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_text_fields_black_48dp" />

                <EditText
                    android:id="@+id/thesaurusText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="8"
                    android:hint="@string/thesaurusText" />

            </LinearLayout>


            <Button
                android:id="@+id/btnThesaurus"
                style="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/btnThesaurus" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">


                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_alarm_black_48dp" />

                <Spinner
                    android:id="@+id/static_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="8" />


            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/btnAppSave"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>